--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Creative Kill Chamber | 77games.io</title>
+    <title>Creative Kill Chamber | Unblcoked Games 76</title>
     <link rel="icon" type="image/x-icon" href="creativekillchamber.jpg" />
     <link rel="shortcut icon" type="image/x-icon" href="creativekillchamber.jpg" />
-		<script type="text/javascript" src="https://66games.io/cloak.js"></script>
+		<script type="text/javascript" src="https://ubg76.github.io/cloak.js"></script>
   </head>
   <body>
   
@@ -24,4 +24,4 @@
       });
     </script>
   </body>
-</html>
+</html> 
